--- a/examples/carousel/carousel-1/carousel.html
+++ b/examples/carousel/carousel-1/carousel.html
@@ -37,6 +37,15 @@
           For additional guidance, see <a href="../../../#kbd_selection_follows_focus">Deciding When to Make Selection Automatically Follow Focus</a>.
       </p>
 
+      <h2>Accessibility Features</h2>
+      <ul>
+        <li>Image rotation stops when keyboard focus enters the controls or content of the carousel.</li>
+        <li>Pause button is to provide a means of screen reader users using review mode to be aware of auto-updating content.</li>
+        <li>
+          To improve readability of the caption text and content, background contrast is improved by decreasing the transparency of the caption area.   This improved the color contrast radio of the white text, especially when light colored image are used in the background.
+        </li>
+      </ul>
+
       <section>
         <h2 id="ex_label">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
