--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -167,7 +167,7 @@
               </tr>
               <tr>
                   <th><kbd>ESC</kbd></th>
-                  <td>Close the dialog and move focus to the calendar button</td>
+                  <td>Close the dialog and move focus back to the calendar button</td>
               </tr>
               <tr>
                 <th><kbd>TAB</kbd></th>
@@ -231,6 +231,10 @@
               <th><kbd>Shift</kbd> + <kbd>TAB</kbd></th>
               <td>Move focus to previous element inside the dialog.</td>
             </tr>
+            <tr>
+                <th><kbd>ESC</kbd></th>
+                <td>Close the dialog and move focus back to calendar button</td>
+              </tr>
           </tbody>
         </table>
     </section>
@@ -263,7 +267,7 @@
             </tr>
             <tr>
               <th><kbd>ESC</kbd></th>
-              <td>Close the dialog</td>
+              <td>Close the dialog and move focus back to calendar button</td>
             </tr>
           </tbody>
         </table>
