editign carousel example

--- a/examples/carousel/carousel-1/carousel.html
+++ b/examples/carousel/carousel-1/carousel.html
@@ -51,17 +51,17 @@
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
         <div id="ex1">
             <div id="myCarousel" class="carousel slide">
-              <aside><button class="pause" aria-pressed="false">Pause Carousel</button></aside>
+              <button class="pause" aria-pressed="false">Pause Carousel</button>
 
               <div class="carousel-inner">
                 <!-- Indicators -->
                 <ol role="tablist" class="carousel-indicators" aria-label="Image Carousel">
-                  <li role="tab" aria-selected="true"  tabindex="0" aria-labelledby="carousel-label-1" aria-controls="carousel-panel-1"></li>
-                  <li role="tab" aria-selected="false" tabindex="0" aria-labelledby="carousel-label-2" aria-controls="carousel-panel-2"></li>
-                  <li role="tab" aria-selected="false" tabindex="0" aria-labelledby="carousel-label-3" aria-controls="carousel-panel-3"></li>
-                  <li role="tab" aria-selected="false" tabindex="0" aria-labelledby="carousel-label-4" aria-controls="carousel-panel-4"></li>
-                  <li role="tab" aria-selected="false" tabindex="0" aria-labelledby="carousel-label-5" aria-controls="carousel-panel-5"></li>
-                  <li role="tab" aria-selected="false" tabindex="0" aria-labelledby="carousel-label-6" aria-controls="carousel-panel-6"></li>
+                  <li role="tab" aria-selected="true"  tabindex="0"  aria-labelledby="carousel-label-1" aria-controls="carousel-panel-1"></li>
+                  <li role="tab" aria-selected="false" tabindex="-1" aria-labelledby="carousel-label-2" aria-controls="carousel-panel-2"></li>
+                  <li role="tab" aria-selected="false" tabindex="-1" aria-labelledby="carousel-label-3" aria-controls="carousel-panel-3"></li>
+                  <li role="tab" aria-selected="false" tabindex="-1" aria-labelledby="carousel-label-4" aria-controls="carousel-panel-4"></li>
+                  <li role="tab" aria-selected="false" tabindex="-1" aria-labelledby="carousel-label-5" aria-controls="carousel-panel-5"></li>
+                  <li role="tab" aria-selected="false" tabindex="-1" aria-labelledby="carousel-label-6" aria-controls="carousel-panel-6"></li>
                 </ol>
 
                 <div role="tabpanel" id="carousel-panel-1" class="carousel-item active" tabindex="0" aria-labelledby="carousel-label-1">
@@ -579,9 +579,8 @@
 
     <nav>
       <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
-      <a href="../../../#tabpanel">Tabs Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../../#carousel">Carousel Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
 
-    <script src="js/tabs.js"></script>
   </body>
 </html>
