--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -145,7 +145,7 @@
           </thead>
           <tbody>
               <tr>
-                  <th><kbd>Space</kbd>, <kbd>Return</kbd></th>
+                  <th><kbd>Space</kbd>,<br> <kbd>Return</kbd></th>
                   <td>Toggle the dialog</td>
               </tr>
           </tbody>
@@ -162,7 +162,7 @@
           </thead>
           <tbody>
               <tr>
-                  <th><kbd>Space</kbd>, <kbd>Return</kbd></th>
+                  <th><kbd>Space</kbd>,<br> <kbd>Return</kbd></th>
                   <td>Change the status of the calendar</td>
               </tr>
               <tr>
@@ -174,7 +174,7 @@
                 <td>Move focus to next element inside the dialog.</td>
               </tr>
               <tr>
-                <th><kbd>Shift</kbd> + <kbd>TAB</kbd></th>
+                <th><kbd>Shift</kbd> + <br><kbd>TAB</kbd></th>
                 <td>Move focus to previous element inside the dialog.</td>
               </tr>    
           </tbody>
@@ -191,7 +191,7 @@
           </thead>
           <tbody>
             <tr>
-                <th><kbd>Space</kbd>,<kbd>Return</kbd></th>
+                <th><kbd>Space</kbd>,<br><kbd>Return</kbd></th>
                 <td>Select the date.</td>
             </tr>
             <tr>
@@ -228,7 +228,7 @@
               <td>Move focus to next element inside the dialog.</td>
             </tr>
             <tr>
-              <th><kbd>Shift</kbd> + <kbd>TAB</kbd></th>
+              <th><kbd>Shift</kbd> +<br> <kbd>TAB</kbd></th>
               <td>Move focus to previous element inside the dialog.</td>
             </tr>
             <tr>
@@ -249,7 +249,7 @@
           </thead>
           <tbody>
             <tr>
-              <th> <kbd>Space</kbd>, <kbd>Return</kbd></th>
+              <th> <kbd>Space</kbd>,<br> <kbd>Return</kbd></th>
               <td>
                 <ul>
                     <li>If it's cancel button, it would not select the focued date and close the dialog.</li>
@@ -262,7 +262,7 @@
               <td>Move focus to next element inside the dialog.</td>
             </tr>
             <tr>
-              <th><kbd>Shift</kbd> + <kbd>TAB</kbd></th>
+              <th><kbd>Shift</kbd> +<br><kbd>TAB</kbd></th>
               <td>Move focus to previous element inside the dialog.</td>
             </tr>
             <tr>
