--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -118,7 +118,7 @@
     <h2 id="kbd_label">Keyboard Support</h2>
 
     <section>
-      <h3 id="kbd_label_1">Date Input keyboard</h3>
+      <h3 id="kbd_label_1">Date Input</h3>
       <table aria-labeeledby="kbd_label_1" class="def">
         <thead>
           <tr>
@@ -208,9 +208,7 @@
           </tr>
           <tr>
             <th><kbd>Down Arrow</kbd></th>
-            <td>
               <td>Move the focus to the same day of the next week.</td>
-            </td>
           </tr>
           <tr>
             <th><kbd>Right Arrow</kbd></th>
@@ -230,11 +228,29 @@
             </td>
           </tr>
           <tr>
+            <th><kbd>Shift</kbd>+<br> <kbd>PageUp</kbd></th>
+            <td>
+              <ul>
+                <li>Change the calendar to the previous Year.</li>
+                <li>If current day of month available on the new month/Year, focus will be on that date, otherwise focus will be on the first date of the month.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
             <th><kbd>PageDown</kbd></th>
             <td>
               <ul>
                 <li>Change the calendar to the next month.</li>
                 <li>If current day of month available on the new month, focus will be on that date, otherwise focus will be on the first date of the month.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Shift</kbd>+<br> <kbd>PageDown</kbd></th>
+            <td>
+              <ul>
+                <li>Change the calendar to the next Year.</li>
+                <li>If current day of month available on the new month/Year, focus will be on that date, otherwise focus will be on the first date of the month.</li>
               </ul>
             </td>
           </tr>
