Forms pattern: editor's note and editorial revisions

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1127,17 +1127,19 @@
     </section>
 
     <section class="widget" id="forms">
-      <h3>Forms: Required, Invalid, Instructions and Error Feedback</h3>
+      <h3>Forms: Placeholders, Instructions, Required, Invalid, and Error Feedback</h3>
+      <p class="ednote">
+        This is an early draft of a new pattern. Please provide feedback in
+        <a href="https://github.com/w3c/aria-practices/issues/252">issue 252.</a>
+      </p>
       <p>
-        In addition to form controls and widget having a label to describe their purpose with the form, form controls often have additional information about including whether a control is required, has instructions, has an invalid value and visible error feedback for invalid values.  NOTE: In general authors should creaet form that minimize invalid values by preventing the user form entering invalid values.
+        In addition to needing accessible labels, form controls often need to make additional information accessible, such as input instructions, error feedback, and whether a value is required or invalid.
+        NOTE: Ideally, forms minimize invalid values by preventing the user from entering them.
       </p>
 
       <section class="notoc">
         <h4>Example</h4>
-        <ul>
-          <li><a href="examples/popup-error/popup-error-1.html">Pizza ordering form with popup errors and instructions</a></li>
-          <li><a href="examples/popup-error/popup-error-2.html">Credit card form with popup errors and instructions</a></li>
-        </ul>
+        <p><a href="examples/forms/popup-error.html">Pizza ordering form with popup errors and instructions</a></p>
       </section>
 
       <section class="notoc">
